fix(search-box): fix for alignment of clear button
Fix for the vertical alignment of the clear buttons at search inputs.
Add the missing clear/reset button for the AddToGroupModal.

--- a/client/src/components/SuggestionBox/style.module.scss
+++ b/client/src/components/SuggestionBox/style.module.scss
@@ -97,6 +97,13 @@
   height: 20px;
 }
 
+// firefox solution to vertically align .resetKeyword
+@supports (-moz-appearance: none) {
+  .resetKeyword {
+    align-self: center;
+  }
+}
+
 .resetKeyword {
   order: 2;
   appearance: none;
@@ -104,6 +111,7 @@
   color: $textColor;
   cursor: pointer;
   font-size: 24px;
+  font-family: Arial;
   outline: none;
 
   &:hover {
